infra/remote-control-relay/gke/base/pwa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remote-control-pwa
  labels:
    app.kubernetes.io/name: remote-control-pwa
  annotations:
    cloud.google.com/backend-config: '{"ports":{"80":"remote-control-pwa-backendconfig"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: remote-control-pwa
  ports:
    - name: http
      port: 80
      targetPort: http
